Fix css bug with selected items on assessment page overlapping nav bar

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -36,6 +36,7 @@ a {
 // nav
 
 nav {
+  z-index: 1;
   width: 100%;
   display: flex;
   align-items: center;
